MDEV-8229 GROUP_MIN_MAX is erroneously applied for BETWEEN in some cases